# MLP-Multi-Layer-Perceptron

./: .gitignore  CMakeLists.txt  LICENSE  README.md  README_XOR.md  graficas.ipynb  main.cpp  run.sh  test.cpp  training_log.csv  training_outputs.txt  xor.cpp
models/: MLP.hpp  model.hpp  perceptron.hpp  singleLayerPerceptron.hpp  trainer.hpp
models/layers/: conv2d_layer.hpp  dense_layer.hpp  dropout_layer.hpp  filter_tokenizer.hpp  flatten_layer.hpp  layer.hpp  pooling_layer.hpp  projector_layer.hpp  tokenizer_layer.hpp  transformer_layer.hpp
models/layers/transformer/: transformer_block.hpp
numbers/: convert.py
output/: adam-784-64-16-10.txt  arch784x64x32x10.txt  asdasd.txt  conv2d-dense.txt  drop02-arch784x64x32x10.txt  drop02-wd-0.01-arch784x64x32x10.txt  drop02-wd-0005-arch784x64x32x10.txt  drop02-wd-5e-4-arch784x64x32x10.txt  drop05-wd-1e-2-arch784x64x32x10.txt  test-conv2d.txt  wd-001-arch784x64x32x10.txt  wd-5e-4-arch784x64x32x10.txt
save_models/: arch784x64x32x10.txt  conv2d-15-epochs.txt  conv2d-2-epochs.txt  conv2d-3-epochs.txt  drop02-arch784x64x32x10.txt  drop02-wd-0005-arch784x64x32x10.txt  drop02-wd-1e-2-arch784x64x32x10.txt  drop02-wd-5e-4-arch784x64x32x10.txt  drop05-wd-1e-2-arch784x64x32x10.txt  minst_test.txt  minst_weights.txt  wd-001-arch784x64x32x10.txt  wd-5e-4-arch784x64x32x10.txt.txt
utils/: activations.hpp  compute_metrics.hpp  data_loader.hpp  load_dataset.hpp  loss.hpp  optimizer.hpp  tensor.hpp
